Patient admission in the hospital created.

--- a/Deploy/Dockerfile
+++ b/Deploy/Dockerfile
@@ -8,13 +8,13 @@ RUN     apt-get update && \
         apt-get install -y -q nodejs wget npm vim && \
         rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
-ADD     .   my-app/
+ADD     .   ../../GeneticCDSS/
 
 
 
 EXPOSE  80
 #EXPOSE  8000
-CMD     cd my-app/bin && sh run_docker.sh
+CMD     cd GeneticCDSS/Deploy/bin && sh run_docker.sh
 
 ###############################################################################
 
