--- a/UI/package.json
+++ b/UI/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "0.9.5",
     "react-select": "^1.2.1",
+    "react-simple-flowchart": "^1.2.2",
     "react-table": "^6.7.6",
     "reflux": "^6.4.1",
     "semantic-ui-css": "^2.3.1",
