--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,17 +1,20 @@
+Django==1.11.10
 certifi==2018.1.18
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.1
-Django==1.11.10
 django-constance==2.1.0
 django-cors-middleware==1.3.1
 django-filter==1.1.0
 django-jet==1.0.7
+django-model-utils==3.1.2
 django-oauth-toolkit==1.0.0
 django-picklefield==1.0.0
 django-rest-swagger==2.1.2
 djangorestframework==3.7.7
+enum34==1.1.6
+gunicorn==19.6.0
 hashids==1.2.0
 idna==2.6
 itypes==1.1.0
@@ -21,6 +24,7 @@ oauthlib==2.0.6
 openapi-codec==1.3.2
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+python-dateutil==2.7.3
 pytz==2018.3
 requests==2.18.4
 simplejson==3.13.2
