Improvements in the nginx configs and some changes in the urls

--- a/config/nginx/genericcdss.conf
+++ b/config/nginx/genericcdss.conf
@@ -4,15 +4,28 @@ upstream web {
 }
 
 server {
+    # where django static files are, like for admin app
+    #location /static {
+    #    alias /static;
+    #}
 
-    location /static/ {    
-        autoindex on;    
-        alias /static/; 
-    }
-
+    # where your frontend js files are
     location / {
-        proxy_pass http://web/;
+        root /frontend;
     }
+
+    # regular uwsgi 
+    location /api {
+        proxy_pass http://web/api;
+    }
+
+    # regular uwsgi 
+    location /admin {
+        proxy_pass http://web/admin;
+    }
+
     listen 8000;
     server_name localhost;
+
 }
+
