Improvements in the configs to help the deployment

--- a/config/nginx/genericcdss.conf
+++ b/config/nginx/genericcdss.conf
@@ -4,22 +4,22 @@ upstream web {
 }
 
 server {
-    # where django static files are, like for admin app
-    #location /static {
-    #    alias /static;
-    #}
+    #where django static files are, like for admin app
+    location /static2 {
+        alias /static;
+    }
 
     # where your frontend js files are
     location / {
         root /frontend;
     }
 
-    # regular uwsgi 
+    # regular uwsgi
     location /api {
         proxy_pass http://web/api;
     }
 
-    # regular uwsgi 
+    # regular uwsgi
     location /admin {
         proxy_pass http://web/admin;
     }
@@ -28,4 +28,3 @@ server {
     server_name localhost;
 
 }
-
