--- a/UI/package.json
+++ b/UI/package.json
@@ -2,6 +2,7 @@
   "name": "genericcdss",
   "version": "0.1.0",
   "private": true,
+  "api_url": "http://127.0.0.1:8000/api/",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
