Some changes in django settings

--- a/config/nginx/genericcdss.conf
+++ b/config/nginx/genericcdss.conf
@@ -4,6 +4,11 @@ upstream web {
 }
 
 server {
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+    }
+
     #where django static files are, like for admin app
     location /static2 {
         alias /static;
