Fixing the urls in the admin pages

--- a/config/nginx/genericcdss.conf
+++ b/config/nginx/genericcdss.conf
@@ -4,26 +4,33 @@ upstream web {
 }
 
 server {
+    error_log	/var/log/nginx/error.log error;
+    root /frontend; 
+
     location = /favicon.ico {
         access_log off;
         log_not_found off;
     }
 
-    #where django static files are, like for admin app
-    location /static2 {
+    location /clision/static2 {
         alias /static;
     }
 
-    # where your frontend js files are
-    location / {
-        root /frontend;
+    location /clision {
+		root /frontend;
+		index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location /clision/static {
+		alias /frontend/static;
+    }
+
+    location /clision/api {
         proxy_pass http://web/api;
     }
 
-    location /admin {
+    location /clision/admin {
         proxy_pass http://web/admin;
     }
 
@@ -31,3 +38,4 @@ server {
     server_name localhost;
 
 }
+
