Configurations necessary to allow dynamic deployments

--- a/config/nginx/genericcdss.conf
+++ b/config/nginx/genericcdss.conf
@@ -12,30 +12,29 @@ server {
         log_not_found off;
     }
 
-    location /clision/static2 {
+    location /{BASE_URL}/static2 {
         alias /static;
     }
 
-    location /clision {
+    location /{BASE_URL} {
 		root /frontend;
 		index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    location /clision/static {
+    location /{BASE_URL}/static {
 		alias /frontend/static;
     }
 
-    location /clision/api {
-        proxy_pass http://web/api;
+    location /{BASE_URL}/api {
+        proxy_pass http://web/{BASE_URL}/api;
     }
 
-    location /clision/admin {
-        proxy_pass http://web/admin;
+    location /{BASE_URL}/admin {
+        proxy_pass http://web/{BASE_URL}/admin;
     }
 
     listen 8000;
     server_name localhost;
 
 }
-
