Update nginx configs

--- a/config/nginx/genericcdss.conf
+++ b/config/nginx/genericcdss.conf
@@ -26,6 +26,10 @@ server {
 		alias /frontend/static;
     }
 
+    location /{BASE_URL}/images {
+        alias /frontend/images;
+    }
+
     location /{BASE_URL}/api {
         proxy_pass http://web/{BASE_URL}/api;
     }
