--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ env/*
 *.pyc
 
 #Put this files in somewhere private
-docker-compose.yml
+!docker-compose.yml
 
 #Ignore migrations
 Backend/accounts/migrations/*
